# tesseract

./: .gitignore  Cargo.toml  flake.nix
controller/: Cargo.toml
controller/src/: main.rs
grpc/: Cargo.toml  build.rs
grpc/proto/cri/v1/: api.proto
grpc/src/: lib.rs
tesseractd/: Cargo.toml
tesseractd/src/: config.rs  main.rs
